# Replit-cpp-unit-tests-demo

./: CMakeLists.txt  README.md
src/: Adc.cpp  Adc.h  Calculator.cpp  Calculator.h  IAdc.h  TemperatureSensor.cpp  TemperatureSensor.h
test/: CMakeLists.txt  Calculator_test.cpp  TemperatureSensor_test.cpp
test/test_doubles/: AdcMock.h  AdcStub.h
